<resources>
    <string name="app_name">DMTipCalculator</string>
    <string name="billTotal">Bill total</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="zero">0.00</string>
    <string name="zero2">0</string>
    <string name="TaxString">Tax</string>
    <string name="InitialNumberString">0.0</string>
    <string name="HeadsString">Heads</string>
    <string name="SplitString">Even Split</string>
    <string name="action_settings">Settings</string>
    <string name="TotalAfterTax">Total+Tax</string>
</resources>
